service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-application-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: web-application
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
